# telepad

./: .env.template  .gitignore  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
api/app/: models.py  serializers.py  utils.py  views.py
api/app/tasks/: downloads.py
api/core/: settings.py
api/users/: models.py  serializers.py  urls.py  views.py
core/: gunicorn.conf.py
core/app/: botviews.py  downloader.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
core/app/bot_api/: urls.py  views.py
core/app/migrations/: 0001_initial.py
core/app/tasks/: downloads.py
core/telepad/: celery.py  settings.py  urls.py
core/users/: backends.py  models.py  serializers.py  urls.py  views.py
core/users/migrations/: 0001_initial.py
frontend/: Dockerfile  Dockerfile.frontend  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css
frontend/src/components/: Board.vue  ConfirmModal.vue  LoginOrUser.vue  SoundList.vue  TagPicker.vue  TaskPlaceholders.vue  TelegramLogin.vue  Toggle.vue
frontend/src/stores/: auth.ts
telegram/: bot.py  templates.py
