[project]
name = "telepad"
version = "0.1.0"
description = "Soundpad web panel integrated into telegram bot"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.6",
    "django-csp>=4.0",
    "django-environ>=0.12.0",
    "django-taggit>=6.1.0",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.4.0",
    "yt-dlp>=2025.9.5",
]
